2006-12-25  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/custom_require.rb (Gem::GemPathSearcher::find):
	Removed SUFFIX_PATTERN.  Evidently this was miss during an earlier
	attempt to remove it.
	(Gem::GemPathSearcher::matching_file): Changed reference to
	SUFFIX_PATTERN into a call to Gem.suffix_pattern.

	* Removed tab characters from numerous source files.
	
	* lib/rubygems/installer.rb (Gem::Uninstaller::uninstall): Removed
	stray tab characters.

	* lib/rubygems.rb (Kernel::require_gem): Added file and line
	number information to require_gem worning (makes it easier to
	track down those offending lines of code).
	(Kernel::location_of_caller): Added helper function to determine
	file and line number of caller.

2006-12-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb (Gem::Installer#app_script_text):
	Simpler, more readable bin script.
	* lib/rubygems/gem_commands.rb (Gem::PristineCommand#execute):
	Regenerate bin scripts.  This will clean up require_gem in scripts.

2006-12-24  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb (Gem::RemoteFetcher#fetch_path):
	Rescue various errors and return a more-friendly error.

2006-12-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/command.rb lib/rubygems/gem_commands.rb: Make help
	output fit in 80 columns.
	* lib/rubygems/rubygems_version.rb: Bump version to 0.9.0.8, beta
	time!  (Oops, didn't go into beta.)

2006-12-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb (Gem::RemoteFetcher#fetch_size): Give
	a sensible error on bad URIs.
	* lib/rubygems/gem_commands.rb (Gem::SourceCommand): Allow management
	of sources in source_cache.  Fixes bug #1128.
	* lib/rubygems.rb (Kernel#require_gem): Add deprecation warning in
	favor of gem.

2006-12-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb (Gem::ExtBuilder): Refactored for
	uniformity.
	* lib/rubygems/remote_installer.rb