@@ -1,3 +1,8 @@
+2006-12-26  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/package.rb (Gem::Package::TarInput#initialize): Bad
+	packages now raise FormatError instead of a generic RuntimeError.
+
 2006-12-25  Jim Weirich  <jim@weirichhouse.org>
 
 	* lib/rubygems/custom_require.rb (Gem::GemPathSearcher::find):
